# ai-stuff

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  QUICK-START.md  README-2.md  README.md  TESTING.md  TROUBLESHOOTING.md  changelog  claude.md  config.toml  demo.sh  progress-ii-progress.md  run
RPG-autobattler/: conf.lua  debug_lane.lua  main.lua  minimal_debug.lua  run  test_simple_vector.lua
adroit/: .gitignore  run
adventure-hero-quest-mega-max-ultra/: Cargo.toml
ai-playground/: README.md  claude_resume_20251110_203016.md  conf.lua  main.lua  phase_demo.sh  test_enhanced_backprop.lua
authorship-tool/: vision
cloudtop-contest/: GDD.txt  combat.lua  hero.lua  item.lua  main.lua  maze.lua  monster.lua  unit.lua
console-demakes/: .gitignore  CLAUDE.md  README.md  build-gba.sh  controls.cfg  run  vbam-config.ini
console-demakes-2/: vision
continual-co-operation/: start-chat.sh  start-daemon.sh
delta-version/: README.md  run-demo.sh
docs/: README.md  ai-image-keyboard.md  anbernic-technical-architecture.md  azerothcore-setup-guide.md  enhanced-input-system.md  implementation-status.md  input-ai-integration.md  input-crypto-integration.md  networking-architecture.md  p2p-mesh-system.md  project-overview-ec.md  project-overview-meta.md  project-overview.md  roadmap-ec.md
examples/: demo.sh  radial_keyboard_test.rs  secure_p2p_demo.rs
factorIDE/: index.html
games/city-of-chat/src/test-build/: CMakeLists.txt  Makefile  cmake_install.cmake  test_main.c
handheld-office/: .gitignore  CLAUDE.md  Cargo.toml  README-2.md  README.md  TESTING.md  run
handheld-office/.cargo/: config.toml
handheld-office/config/: gameboy_input.json
handheld-office/docs/: data-flow-architecture.md  implementation-status.md
handheld-office/docs/ai/: ai-image-keyboard.md
handheld-office/docs/games/: azerothcore-setup-guide.md  azerothcore-technical-architecture.md
handheld-office/docs/hardware/: anbernic-technical-architecture.md
handheld-office/docs/input/: input-ai-integration.md  input-quick-reference.md
handheld-office/docs/networking/: architecture.md  cryptographic-architecture.md  p2p-mesh-system.md  p2p-quick-reference.md
handheld-office/examples/: README.md  enhanced_input_demo.rs  terminal_simple_test.rs  terminal_test.rs
handheld-office/examples/portmaster/keyboard-test/: Cargo.toml  build.sh  controls.cfg  portmaster.json
handheld-office/examples/presentation-docs/: anthropic-consulting-proposal.md  educational-institutions-proposal.md  friends-party-guide.md
handheld-office/examples/test-cases/: README.md  dual-client-messaging.sh  music-jam-session.sh  network-stress-test.sh  test_common.sh
handheld-office/issues/: 011-documentation-code-mismatch-mediaplayer.md  012-documentation-code-mismatch-enhanced-input.md  024-compilation-errors-master-tracking.md  026-cargo-toml-game-paths-update.md  032-handheld-office-presentation.md  033-anthropic-commandguide-presentation.md  034-anthropic-ai-collaboration-presentation.md  COMPLETED.md  COMPLIANCE-VALIDATION-REPORT.md  TASKS.md  sort-me-please.md
handheld-office/issues/done/: 001-enhanced-input-missing-docs.md  002-enhanced-input-docs-outdated.md  003-test-runner-binary-missing-resolved.md  003-test-runner-not-implemented.md  005-missing-mediaplayer-implementation.md  005-missing-terminal-docs.md  007-external-api-violations-ai-services-resolved.md  007-missing-directories.md  008-external-llm-api-violations-resolved.md  009-orchestrator-command-output-error.md  010-comprehensive-crypto-integration-completed.md  013-p2p-only-compliance-violations-resolved.md  014-radial-keyboard-implementation-complete.md  015-enhanced-input-edit-mode-improvements.md  015-networking-architecture-compliance-violations-resolved.md  016-daemon-tcp-server-architecture-mismatch-resolved.md  017-mmo-networking-architecture-violations-resolved.md  018-code-comments-networking-violations-resolved.md  019-async-trait-object-safety-violations.md  020-documentation-encapsulation-and-reorganization.md  020-missing-struct-fields-and-methods.md  022-test-compilation-integration-issues.md  023-unused-imports-and-code-cleanup.md  027-documentation-game-path-updates-resolved.md
handheld-office/llm-transcripts/: 25c344af-0a9b-49e9-8c36-a6fe8637fbb9_summary.md  32209423-76ed-444e-bf88-901d8e221555_summary.md  75bf94d9-205f-462d-8b84-0499b433a151_summary.md  b15647f2-88c1-44eb-83a3-98516d212595_summary.md  fb7c2711-bcc7-4834-9470-25249802b7a5_summary.md
handheld-office/notes/: vision
handheld-office/scripts/: backup-conversations  run_tests.sh  simple_run.sh
handheld-office/scripts/fuzzy-computing/: main_curl.lua
handheld-office/src/: ai_image_service.rs  battleship_pong_demo.rs  daemon.rs  desktop_llm.rs  email_demo.rs  input_config.rs  laptop_daemon.rs  lib.rs  media.rs  mmo_demo.rs  mmo_engine.rs  music.rs  music_demo.rs  p2p_mesh.rs  paint.rs  paint_demo.rs  scuttlebutt.rs  terminal_demo.rs  wifi_direct_p2p.rs
handheld-office/src/crypto/: bytecode.rs  keypair.rs  pairing.rs
handheld-office/src/games/: README.md
handheld-office/tests/integration/: user_workflows.rs
handheld-office/tests/unit/: crypto_tests.rs  laptop_daemon_tests.rs
handheld-office/todo/: cryptographic-communication-implementation.md
handheld-office/todo/completed/: phase1-cryptographic-foundation.md
healer-td/: CLAUDE.md
ideas/: idea
inspiration/: main-menu.lua  map.lua  shop.lua  ui.lua
intelligence-system/: vision
issues/: 003-test-runner-binary-missing.md  004-azerothcore-setup-inconsistencies.md  007-external-api-violations-ai-services.md  008-external-llm-api-violations.md  013-p2p-only-compliance-violations.md  014-radial-keyboard-implementation-incomplete.md  015-networking-architecture-compliance-violations.md  016-daemon-tcp-server-architecture-mismatch.md  CLAUDE.md  README.md  (+10 more)
(+6588 files in other folders)
